Update to stop divs collapsing.

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,41 +1,56 @@
 body {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
     max-width: 100%;
     background-color: #FC4C02;
+
 }
 
+@media(max-width: 768px) {
+    body {
+        flex-direction: column;
+    }
 
+    #right {
+        width: 100%;
+        overflow: scroll;
+    }
+
+    #left {
+        width: 100%;
+        overflow: scroll;
+    }
+}
 
 #header {
     color: white;
+    text-align: left;
+    margin-left: 1%;
     margin: 0;
-    padding: 2%;
-    text-align: center;
-
+    width: 100%;
+    font-size: large;
+    font-weight: bolder;
 }
 
+.content {
+    display: flex;
+    flex-direction: row;
+    margin-top: 0;
+    height: 100vh;
+}
 
 #right {
-    background-color: burlywood;
-    margin-top: 6%;
-    position: absolute;
+    background-color: #EADDCA;
     right: 5px;
     width: 50%;
-    height: 100%;
+    height: 113%;
     padding: 1%;
     text-align: center;
+    
 }
 
 #left {
-    background-color: aquamarine;
+    background-color: white;
     width: 50%;
-    margin-top: 6%;
-    position: absolute;
     height: 100%;
-
-
 }
 
 img {
@@ -45,32 +60,39 @@ img {
 }
 
 #logoff {
-    font-size: 15px;  
-    margin:0 auto;
-    display:block;
+    font-size: 15px;
+    margin: 0 auto;
+    display: block;
 
-    
+
 }
 
 #activities,
 #edit-activity {
     background-color: white;
-    width: 47.3%;
-    margin-top: 6%;
-    position: absolute;
 }
+
+#activities-table {
+    margin: 10px;
+    padding: 10px;
+    table-layout: fixed;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 
 #totals {
     border: 1px solid black;
     width: 100%;
-  margin: 20px auto;
-  table-layout: fixed;
+    margin: 20px auto;
+    table-layout: fixed;
 
-    
-  }
 
-   th{
-    padding: 10px;
+}
+
+th {
+    padding: 15px;
     text-align: center;
-  
-  }
+
+}
